--- a/css/bag.css
+++ b/css/bag.css
@@ -134,3 +134,13 @@
   height: 14px;
   cursor: pointer;
 }
+
+.original-price {
+  text-decoration: line-through;
+  font-size: 12px;
+  color: #7e818e;
+}
+
+.discount-percentage {
+  color: #ff905a;
+}
